# cross-platform-bullet-hell-shared

./: .gitignore  CMakeLists.txt
include/: async_channel.hpp  game_logic_constants.hpp
include/logger/: logger.hpp
include/packet_serializer/: frame_serializer.hpp  game_serializer.hpp  greeting_serializer.hpp  header_serializer.hpp  input_serializer.hpp  packet_serializer.hpp
include/packet_stream/: packet_stream.hpp
include/packet_template/: frame.hpp  game.hpp  greeting.hpp  header.hpp  input.hpp  packet_template.hpp
include/packet_template/frame/: frame_enums.hpp  frame_structs.hpp
include/packet_template/game/: game_enums.hpp  game_structs.hpp
include/packet_template/greeting/: greeting_enums.hpp  greeting_structs.hpp
include/packet_template/input/: input_snapshot.hpp
include/socket/: socket.hpp
